# PeakRDL-rust

./: .gitignore  .readthedocs.yaml  ARCHITECTURE.md  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  tox.ini
.github/workflows/: _build_binaries.yml  ci.yml  publish.yml
crates/: Cargo.toml
crates/peakrdl-rust/: CHANGELOG.md  Cargo.toml  README.md
crates/peakrdl-rust-build/: Cargo.toml  README.md
crates/peakrdl-rust-build/src/: binary.rs  error.rs  lib.rs
crates/peakrdl-rust/src/: access.rs  endian.rs  fixedpoint.rs  io.rs  lib.rs  mem.rs  reg.rs  version.rs
crates/smoke-test/: Cargo.toml  build.rs
crates/smoke-test/src/: lib.rs
docs/: .gitignore  Makefile  README.md  api.rst  build.py  conf.py  configuring.rst  examples.rst  index.rst  licensing.rst  limitations.rst  output.rst
docs/_static/css/: custom.css
docs/examples/: Makefile  turboencabulator.rdl  turboencabulator.rs
docs/examples/turboencabulator/: Cargo.toml  build.rs
docs/examples/turboencabulator/src/: lib.rs
docs/udps/: fixedpoint.rst  intro.rst  signed.rst
scripts/: build_binary.ps1  build_binary.sh  entrypoint.py  uv_local_peakrdl_rust.sh  uv_peakrdl_rust.sh  uv_wrapper.sh
src/peakrdl_rust/: __init__.py  __peakrdl__.py  component_context.py  crate_generator.py  design_scanner.py  design_state.py  exporter.py  generator.py  identifier_filter.py  test_generator.py  utils.py
src/peakrdl_rust/templates/: Cargo.toml.tmpl  components.rs  mod.rs
src/peakrdl_rust/templates/components/: addrmap.rs  enum.rs  macros.jinja2  memory.rs  register.rs
src/peakrdl_rust/templates/src/: access.rs  components.rs  fixedpoint.rs  lib.rs  mem.rs  reg.rs
src/peakrdl_rust/templates/src/components/: addrmap.rs  enum.rs  macros.jinja2  memory.rs  reg.rs  register.rs
src/peakrdl_rust/templates/tests/: test_addrmap.rs
src/peakrdl_rust/templates/tests/memory/: mod.rs
src/peakrdl_rust/udps/: __init__.py  signed.py
tests/: test_access_mode.py  test_peakrdl_rust.py
tests/rdl_src/: access_modes.rdl  access_modes_hardware.rs  access_modes_read_only.rs  access_modes_software.rs  basic.rdl  basic.rs  enums.rdl  enums.rs  field_access_types.rdl  fixedpoint.rdl  fixedpoint.rs  memories.rdl  memories.rs  rust_keywords.rdl  signed.rdl  turboencabulator.rdl  turboencabulator.rs
tests/rdl_src/compile_fail/access_modes_hardware/: no_hw_na_field.rs  no_hw_na_field.stderr  no_sw_reg.rs  no_sw_reg.stderr
tests/rdl_src/compile_fail/access_modes_read_only/: no_set_sw_rw.rs  no_set_sw_rw.stderr  no_set_sw_w.rs  no_set_sw_w.stderr  no_write_method.rs  no_write_method.stderr
tests/templates/: Cargo.toml.jinja2  Cargo.toml.tmpl  lib.rs.jinja2
