[project]
name = "peakrdl-rust"
version = "0.1.0"
description = "Generate a Rust crate from SystemRDL for accessing control/status registers."
readme = "README.md"
authors = [{ name = "Dana Sorensen", email = "dana.r.sorensen@gmail.com" }]
requires-python = ">=3.9"
license = "LGPL-2.1-or-later"
keywords = [
    "SystemRDL",
    "PeakRDL",
    "CSR",
    "compiler",
    "tool",
    "registers",
    "generator",
    "Rust",
    "PAC",
    "embedded",
]
dependencies = [
    "case-converter>=1.2.0",
    "jinja2>=3.1.6",
    "systemrdl-compiler>=1.29.3",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-xdist>=3.8.0",
]

[project.optional-dependencies]
dependencies = ["peakrdl-cli>=1.4.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
typeCheckingMode = "standard"
include = ["src"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[project.entry-points."peakrdl.exporters"]
rust = "peakrdl_rust.__peakrdl__:Exporter"
