[package]
name = "peakrdl-rust-build"
version = "0.6.0"
edition = "2024"
description = "Build script helper that runs PeakRDL-rust to generate Rust register access code from SystemRDL files"
license = "MIT OR Apache-2.0"
repository = "https://github.com/darsor/PeakRDL-rust"
keywords = ["systemrdl", "peakrdl", "build-script", "registers", "embedded"]
categories = ["development-tools::build-utils", "embedded"]

[dependencies]
dirs = { version = "6.0.0", optional = true }
flate2 = { version = "1.1.9", optional = true }
hex = { version = "0.4.3", optional = true }
peakrdl-rust = { path = "../peakrdl-rust" }
sha2 = { version = "0.10.9", optional = true }
tar = { version = "0.4.44", optional = true }
thiserror = "2"
ureq = { version = "3.2.0", optional = true }

[features]
default = ["download-bin"]
# Disable this feature to skip the download and require PEAKRDL_RUST_BINARY to be set
download-bin = ["dep:flate2", "dep:hex", "dep:tar", "dep:ureq", "dep:dirs", "dep:sha2"]
