[package]
name = "peakrdl-rust"
description = "Generate Rust register definitions from SystemRDL sources"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/darsor/PeakRDL-rust"
keywords = [
    "embedded",
    "PAC",
    "peakrdl",
    "registers",
    "systemrdl",
]
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
readme = "README.md"

[dependencies]
heapless = { version = "0.9.1", optional = true }
num-traits = { version = "0.2.19", default-features = false}

[features]
default = []
fixedpoint = ["dep:heapless", "num-traits/libm"]

[lints.clippy]
pedantic = "warn"
doc_markdown = "allow"
